// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionalBanner should match snapshot (desktop) 1`] = `
.c2 {
  grid-area: icon;
  margin-top: 2px;
}

.c0 {
  background-color: #f9f7fb;
  border: 1px solid #602FA0;
  box-sizing: border-box;
  line-height: 24px;
  padding: var(--spacing-2x);
  position: relative;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 .c1 {
  color: #602FA0;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c5 {
  font-size: 0.875rem;
  margin: var(--spacing-1x) 0 0 0;
}

.c3 {
  box-sizing: border-box;
  grid-area: content;
  padding-left: var(--spacing-2x);
}

.c4 {
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
}

<div
  aria-atomic="true"
  aria-live="polite"
  class="c0"
  role="status"
>
  <svg
    aria-hidden="true"
    class="c1 c2"
    color="currentColor"
    focusable="false"
    height="20"
    width="20"
  />
  <div
    class="c3"
  >
    <span
      class="c4"
    >
      Information
    </span>
    <p
      class="c5"
    >
      Test
    </p>
  </div>
</div>
`;

exports[`SectionalBanner should match snapshot (mobile) 1`] = `
.c2 {
  grid-area: icon;
  margin-top: 2px;
}

.c0 {
  background-color: #f9f7fb;
  border: 1px solid #602FA0;
  box-sizing: border-box;
  line-height: 28px;
  padding: var(--spacing-3x) var(--spacing-2x);
  position: relative;
  width: 100%;
  display: grid;
  grid-template-areas: "icon content" "button button";
  grid-template-columns: auto 1fr;
}

.c0 .c1 {
  color: #602FA0;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c5 {
  font-size: 1rem;
  margin: var(--spacing-2x) 0 0 0;
}

.c3 {
  box-sizing: border-box;
  grid-area: content;
  padding-left: var(--spacing-2x);
}

.c4 {
  font-size: 1.125rem;
  font-weight: var(--font-semi-bold);
}

<div
  aria-atomic="true"
  aria-live="polite"
  class="c0"
  role="status"
>
  <svg
    aria-hidden="true"
    class="c1 c2"
    color="currentColor"
    focusable="false"
    height="24"
    width="24"
  />
  <div
    class="c3"
  >
    <span
      class="c4"
    >
      Information
    </span>
    <p
      class="c5"
    >
      Test
    </p>
  </div>
</div>
`;
